<resources>
    <string name="app_name">Hush</string>
    <string name="we_have_sent_you_containing_6_digits_n_verification_code_please_enter_the_code_to_n_verify_your_identity">We have sent you containing 6 digits\n verification code. Please enter the code to\n verify your identity</string>
    <string name="full_name">Full Name</string>
    <string name="home">Home</string>
    <string name="screenshots">Screenshots</string>
    <string name="subscription">Subscription</string>
    <string name="security_features">Security Features</string>
    <string name="settings">Settings</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="terms_amp_conditions"><![CDATA[Terms & Conditions]]></string>
    <string name="address_book">Address Book</string>
    <string name="dial_pad">Dial Pad</string>
    <string name="chat">Chat</string>
    <string name="dummy">Classic checkerboard slip ons with offwhite under tone and reinforced waffle cup soles is a tone and reinforced waffle soles.Classic ka checkerboard slip ons with office white hnan dunder tone and reinforced wafflede cup solesking tone and reinforced wafflese cup soles.</string>
    <string name="update">Update</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="user_profile">User Profile</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="_1">1</string>
    <string name="_6">6</string>
    <string name="_5">5</string>
    <string name="_4">4</string>
    <string name="_3">3</string>
    <string name="_7">7</string>
    <string name="_8">8</string>
    <string name="_9">9</string>
    <string name="star">*</string>
    <string name="_0">0</string>
    <string name="hash">#</string>
    <string name="_2">2</string>
    <string name="create_a_new_contact">Create a New Contact</string>
    <string name="search">Search</string>
    <string name="last_name">Last Name</string>
    <string name="google_map_key">"AIzaSyBmaS0B0qwokES4a_CiFNVkVJGkimXkNsk"</string>
    <string name="google_client_token">285601646974-nebj9q651i99jadj220gsfdi3rmtaqau.apps.googleusercontent.com</string>
    <string name="permission_required">Permission required</string>
    <string name="channelId">111</string>
    <string name="profile_has_been_updated_successfully">Profile has been updated successfully.</string>
    <string name="contact_has_been_created_successfully">Contact has been created successfully.</string>
    <string name="delete">Delete</string>
    <string name="are_you_sure_you_want_to_delete_this_chat">Are you sure you want to delete this chat</string>
    <string name="delete_chat">Delete Chat</string>
    <string name="connected">Connected</string>
    <string name="reconnecting">Reconnecting</string>
    <string name="ringing">Ringing</string>
</resources>